<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.raingeval.booksmanager.EditBookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="#fefefe">
            </TextView>
            <EditText
                android:id="@+id/edit_title"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#eaeaea"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="#fefefe">
            </TextView>
            <EditText
                android:id="@+id/edit_author"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#eaeaea"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isbn"
                android:textColor="#fefefe">
            </TextView>
            <EditText
                android:id="@+id/edit_isbn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#eaeaea"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="#fefefe">
            </TextView>
            <EditText
                android:id="@+id/edit_category"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#eaeaea"/>
        </LinearLayout>
		
		<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher"
                android:textColor="#fefefe">
            </TextView>
            <EditText
                android:id="@+id/edit_publisher"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#eaeaea"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textColor="#fefefe">
            </TextView>
            <EditText
                android:id="@+id/edit_year"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#eaeaea"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="#fefefe">
            </TextView>
            <EditText
                android:id="@+id/edit_description"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#eaeaea"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/button_activity_edit_book"
                android:onClick="editBook"
                android:layout_marginTop="25dp"
                android:background="#d2b025" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
