<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.raingeval.booksmanager.FilterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_all_books"
            android:onClick="goToDisplayBooksActivity"
            android:background="#d2b025"
            android:layout_marginBottom="25dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_filter"
            android:onClick="goToAddFilterActivity"
            android:background="#3d9fea"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_activity_display_filters"
            android:textColor="#ffffff"
            android:onClick="goToDisplayFiltersActivity"
            android:background="#011b64" />


    </LinearLayout>

</RelativeLayout>
