<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.raingeval.booksmanager.AddFilterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_filter"
                android:textColor="#fefefe">
            </TextView>
            <EditText
                android:id="@+id/edit_author_filter"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#eaeaea"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_filter"
                android:textColor="#fefefe">
            </TextView>
            <EditText
                android:id="@+id/edit_category_filter"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#eaeaea"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher_filter"
                android:textColor="#fefefe">
            </TextView>
            <EditText
                android:id="@+id/edit_publisher_filter"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#eaeaea"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_filter"
                android:textColor="#fefefe">
            </TextView>
            <EditText
                android:id="@+id/edit_year_filter"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#eaeaea"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/button_add_filter"
                android:onClick="addFilter"
                android:layout_marginTop="25dp"
                android:background="#3d9fea" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
