<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#611919" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <Button android:id="@+id/scan_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/scan"
            android:background="#FE8801"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/scan_button">

            <TextView
                android:id="@+id/scan_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff000000"
                android:textIsSelectable="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scan_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffa13143"
                android:textIsSelectable="true" />

            <ImageView
                android:id="@+id/thumb"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:contentDescription="@string/thumb" />

            <TextView
                android:id="@+id/scan_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff592d94"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/scan_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff000000"
                android:textIsSelectable="true" />

            <LinearLayout
                android:id="@+id/scan_star_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/scan_rating_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff2d6994"
                android:textIsSelectable="true"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/button_add"
                    android:onClick="addBook"
                    android:layout_marginTop="25dp"
                    android:background="#d2b025" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>